--- a/forum_v2/forum/templates/forum/base.html
+++ b/forum_v2/forum/templates/forum/base.html
@@ -128,8 +128,7 @@
                     </ul>
                 </div>
                 <div class="search__results">
-                    <a class="search__result">custom result 2</a>
-                    <a class="search__result">custom result 3</a>
+                    <div class="search__result_empty">nothing founded</div>
                 </div>
             </div>
             {% if request.user.is_authenticated %}
