--- a/forum_v2/forum/static/forum/css/start_page.css
+++ b/forum_v2/forum/static/forum/css/start_page.css
@@ -56,8 +56,22 @@
     color: #dbdbdb;
 }
 
-@media (max-width: 768px){
-    .search-field{
+@media (max-width: 768px) {
+    .search-field {
         width: 90%;
+        box-shadow: inset 0 10px 20px 20px #0000003f;
+    }
+
+    .section {
+        margin: 25px;
+        padding: 15px 10px 10px 10px;
+    }
+
+    .section__rules {
+        padding-left: 25px;
+    }
+
+    .content-field > div {
+        margin-top: 20px;
     }
 }
