stable version with sqlite

--- a/forum_v2/forum/static/forum/css/pagination.css
+++ b/forum_v2/forum/static/forum/css/pagination.css
@@ -43,3 +43,8 @@
     background: #332f2f;
     pointer-events: none;
 }
+@media (max-width: 768px) {
+    .pagination {
+        margin: 15px;
+    }
+}
