--- a/forum_v2/forum/templates/forum/discussion.html
+++ b/forum_v2/forum/templates/forum/discussion.html
@@ -14,7 +14,9 @@
 
 {% block additional_js %}
     <script src="{% static 'forum/js/comments.js' %}"></script>
-    <script src="{% static 'forum/js/comments_ajax.js' %}"></script>
+    {% if request.user.is_authenticated %}
+        <script src="{% static 'forum/js/comments_ajax.js' %}"></script>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
