--- a/forum_v2/forum/templates/forum/base_profile.html
+++ b/forum_v2/forum/templates/forum/base_profile.html
@@ -24,7 +24,7 @@
             {% endif %}
             <div class="profile__info">
                 <div class="profile__nickname">{{ user.username }}</div>
-                <div class="profile__description">{{ user.credo }}</div>
+                <div class="profile__description">{{ user.userdescription.credo }}</div>
             </div>
         </div>
 
@@ -34,7 +34,7 @@
                 <div>about user</div>
             </div>
             {% if request.user.is_authenticated and user.id == user_id %}
-            <a href="{% url 'base_settings' %}" class="profile__settings">
+                <a href="{% url 'base_settings' %}" class="profile__settings">
                 <div class="symbol-gear">&#x2699;</div>
                 <div>settings</div>
             </a>
