--- a/forum_v2/forum/templates/forum/base.html
+++ b/forum_v2/forum/templates/forum/base.html
@@ -1,10 +1,10 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" data-mode="ligth">
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <link rel="icon" type="images/x-icon" href="{% static 'forum/favicon/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'forum/css/critical.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'forum/css/header.css' %}">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
